# nano-graphrag

./: .env.api.example  .env.example  .env.neo4j.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile.api  api_server.py  docker-compose-api.yml  docker-compose-neo4j.yml  docker-compose-redis.yml  logging_config.json  main.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup.py  test_ngraf_020_2.py  test_sparse_generation.py
.github/: README.md
docs/: docker-neo4j-setup.md  entity_extraction.md  migration_guide.md  testing_guide.md  use_neo4j_for_graphrag.md
examples/: extraction_strategies.py  storage_qdrant_config.py  using_config.py  using_fastapi_api.py
nano_graphrag/: __init__.py  _chunking.py  _community.py  _extraction.py  _llm.py  _op.py  _query.py  _utils.py  base.py  chunking.py  community.py  config.py  extraction.py  graphrag.py  prompt.py  query.py  schemas.py
orchestration/: README.md  iterm_review.sh  review-tmux-backup.sh  review.sh  review_controller.py  review_iterm.py  test_iterm2.py
reports/: NGRAF-002-implementation-report.md  NGRAF-002-review-fixes.md  NGRAF-002-round2-fixes.md  NGRAF-002-round3-fixes.md  NGRAF-003-implementation-report.md  NGRAF-003-review-fixes.md  NGRAF-004.5-round2-implementation.md  NGRAF-004.5-round3-implementation.md  NGRAF-004.5-test-modernization-implementation.md  NGRAF-005.5-final-implementation.md  NGRAF-005.5-implementation.md  NGRAF-005.5-round2-implementation.md
reviews/: NGRAF-002-implementation-review.md  NGRAF-002-review-round2.md  NGRAF-002-review-round3.md  NGRAF-002-review-round4.md  (+12 more)
(+387 files in other folders)
