[project]
name = "nano-graphrag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aioboto3>=15.1.0",
    "dspy-ai>=3.0.2",
    "graspologic>=3.4.1",
    "hnswlib>=0.8.0",
    "nano-vectordb>=0.0.4.3",
    "neo4j>=5.28.2",
    "networkx>=3.5",
    "numpy>=1.26.4",
    "openai>=1.101.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.1",
    "tenacity>=9.1.2",
    "tiktoken>=0.11.0",
    "transformers>=4.55.4",
    "xxhash>=3.5.0",
]
